--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Appfeed-backup.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Appfeed-backup.page
@@ -3,6 +3,13 @@ Title="Community Applications"
 Icon="community.applications.png"
 ---
 <?
+###############################################################
+#                                                             #
+# Community Applications copyright 2015-2019, Andrew Zawadzki #
+#                    All Rights Reserved                      #
+#                                                             #
+###############################################################
+
 require_once("/usr/local/emhttp/plugins/community.applications/include/paths.php");
 require_once("/usr/local/emhttp/plugins/community.applications/include/helpers.php");
 $appfeed = download_json($communityPaths['application-feedBackup'],"{$communityPaths['tempFiles']}/appfeed-check.json");
