--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -7,6 +7,7 @@ Tag="icon-apps"
 ###############################################################
 #                                                             #
 # Community Applications copyright 2015-2019, Andrew Zawadzki #
+#                    All Rights Reserved                      #
 #                                                             #
 ###############################################################
 
