--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1,7 +1,7 @@
 Menu="Apps"
 Icon="community.applications.png"
 Title="Community Applications"
-Tag="icon-apps"
+Tag="users"
 ---
 <?
 ###############################################################
